--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0-0",
+    "autoprefixer": "^10.4.20",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0-0"
+    "eslint-plugin-vue": "^7.0.0-0",
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.7"
   },
   "eslintConfig": {
     "root": true,
